added gitignore, 1st header

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -6,22 +6,27 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CV 2018 Gildas PIERRE</title>
   <link rel="stylesheet" href="cv.css">
+  <link rel="stylesheet" href="cv-screenonly.css" media="screen">
 </head>
 <body>
-  <header>
-    <img src="photo_id.png" >
-    <h2 class="name">Gildas PIERRE</h2>
-    <h1>Développeur frontend</h1>
-    <ul>
-      <li>32 ans</li>
-      <li>06-64-15-26-17</li>
-      <li>giildas@gmail.com</li>
-      <li>https://github.com/giildas</li>
-      <li>http://giildas.fr</li>
-    </ul>
-  </header>
-  <section id="competences"></section>
-  <section id="experiences"></section>
-  <section id="interets"></section>
+  <div class="page">
+    <header>
+      <div class="titles">
+        <h2 class="name">Gildas PIERRE</h2>
+        <h1>Développeur frontend</h1>
+      </div>
+      <ul>
+        <li>32 ans</li>
+        <li>06 64 15 26 17</li>
+        <li><a href="mailto:giildas@gmail.com">giildas@gmail.com</a></li>
+        <li><a href="https://github.com/giildas">https://github.com/giildas</a></li>
+        <li><a href="http://giildas.fr">http://giildas.fr</a></li>
+      </ul>
+      <img src="photo_id.png" >
+    </header>
+    <section id="competences"></section>
+    <section id="experiences"></section>
+    <section id="interets"></section>
+  </div>
 </body>
 </html>
