added font icons and styled SKILLS section

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -7,6 +7,7 @@
   <title>CV 2018 Gildas PIERRE</title>
   <link rel="stylesheet" href="cv.css">
   <link rel="stylesheet" href="cv-screenonly.css" media="screen">
+  <link rel="stylesheet" href="./fontawesome/all.css">
 </head>
 <body>
   <div class="page">
@@ -24,9 +25,118 @@
       </ul>
       <img src="photo_id.png" >
     </header>
-    <section id="competences"></section>
-    <section id="experiences"></section>
-    <section id="interets"></section>
+
+    <h1>Compétences</h1>
+    <section id="skills">
+      <div class="skill">
+        <h3><i class="fas fa-code"></i> Langages</h3>
+        <div class="skill-content">
+          <div><i class="fab fa-html5"></i>HTML 5</div>
+          <div><i class="fab fa-css3-alt"></i>CSS 3</div>
+          <div><i class="fab fa-js"></i>Javascript (es6)</div>
+          <div><i class="fab fa-php"></i>Php</div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3><i class="fas fa-atlas"></i> Librairies JS</h3>
+        <div class="skill-content">
+          <div><i class="fas fa-paint-brush"></i> React, Vuejs, Bootstrap</div>
+          <div><i class="fas fa-map-marked-alt"></i> Leaflet, Mapbox-gl</div>
+          <div><i class="fas fa-cubes"></i> Threejs, d3.js, chartjs...</div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3><i class="fas fa-toolbox"></i> Outils</h3>
+        <div class="skill-content">
+          <div><i class="fas fa-cogs"></i> NPM, Webpack</div>
+          <div><i class="fab fa-node-js"></i> Nodejs</div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3><i class="fas fa-laptop-code"></i> Standalone/mobile</h3>
+        <div class="skill-content">
+          <div><i class="fas fa-desktop"></i> Electron, NW.js</div>
+          <div><i class="fas fa-mobile-alt"></i> Cordova</div>
+        </div>
+      </div>
+      <div class="skill">
+        <h3>Logiciels</h3>
+        <div class="skill-content">
+          <div>wordpress</div>
+          <div>qGis</div>
+          <div>suite Adobe</div>
+          <div>creative coding : Pure Data / vvvv</div>
+        </div>
+      </div>
+    </section>
+
+
+    <section id="experiences">
+      <h1>Expériences professionnelles</h1>
+      <div class="exp">
+        2018
+        <h3>Développeur frontend @ Circlesoft (Nouvelle-Zélande)</h3>
+        * https://circlepos.com/
+        * Développement d'une interface pour le backoffice d'un système de gestion pour des librairies.
+          * vuejs
+          * création d'API de communication avec le backend Rails
+      </div>
+      <div class="exp">
+        <h3></h3>
+      </div>
+      <div class="exp">
+        <h3></h3>
+      </div>
+      <div class="exp">
+        2014-2017
+        <h3>Développeur js/node @ mgdesign (Nantes)</h3>
+        * http://www.mgdesign.fr/
+        * Création d'interface pour des applications 3D et muséographie
+        * reactjs / css3...
+        * Cartographie interactive
+        * Développement de mini-jeux canvas
+        * Développement backend : nodeJs : divers scripts
+        * Développement Wordpress : thèmes et plugins
+      </div>
+      <div class="exp">
+        2014
+        <h3>Intégrateur frontend @ Les Polypodes (Nantes)</h3>
+        * html5, CSS3, Twitter bootstrap, jQuery, code sémantique
+      </div>
+
+      <div class="exp">
+        2014
+        <h3>Développement web freelance</h3>
+        * Développement themes et plugins wordpress (la plupart offline)
+      </div>
+
+      <div class="exp">
+        2012
+        <h3>Developpeur web stage @ Association Culturelle de l'été (Nantes)</h3>
+        * Développement du site du festival les Rendez-vous de l'Erdre avec Wordpress
+      </div>
+      <div class="exp">
+        2010 - 2014 :
+        <h3>Developpeur de jeux vidéo @ Collectif Battle Interactive</h3>
+        * https://vimeo.com/battleinteractive
+        * Développement de jeux vidéo jouables par un grand nombre de personnes durant des évenements publics (concerts/festivals)
+        * Analyse d'images video, et capteurs (arduino)
+        * Logiciels : Pure Data / VVVV
+        * Compétences techniques (insallation de caméras, lumières)
+        *
+      </div>
+
+    </section>
+
+
+
+    <section id="interets">
+        * Voyages
+        * Lecture / Films
+        * Randonnée, vélo
+        * Bricolage
+        * Bénévolat (festivals)
+    </section>
   </div>
 </body>
 </html>
