last icons for skills section

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -38,7 +38,7 @@
         </div>
       </div>
       <div class="skill">
-        <h3><i class="fas fa-atlas"></i> Librairies JS</h3>
+        <h3><i class="fas fa-laptop-code"></i> Librairies JS</h3>
         <div class="skill-content">
           <div><i class="fas fa-paint-brush"></i> React, Vuejs, Bootstrap</div>
           <div><i class="fas fa-map-marked-alt"></i> Leaflet, Mapbox-gl</div>
@@ -50,22 +50,17 @@
         <div class="skill-content">
           <div><i class="fas fa-cogs"></i> NPM, Webpack</div>
           <div><i class="fab fa-node-js"></i> Nodejs</div>
-        </div>
-      </div>
-      <div class="skill">
-        <h3><i class="fas fa-laptop-code"></i> Standalone/mobile</h3>
-        <div class="skill-content">
           <div><i class="fas fa-desktop"></i> Electron, NW.js</div>
           <div><i class="fas fa-mobile-alt"></i> Cordova</div>
         </div>
       </div>
       <div class="skill">
-        <h3>Logiciels</h3>
+        <h3><i class="far fa-window-restore"></i> Logiciels</h3>
         <div class="skill-content">
-          <div>wordpress</div>
-          <div>qGis</div>
-          <div>suite Adobe</div>
-          <div>creative coding : Pure Data / vvvv</div>
+          <div><i class="fab fa-wordpress"></i> Wordpress</div>
+          <div><i class="fas fa-globe"></i> qGis</div>
+          <div><i class="fas fa-paint-brush"></i> Suite Adobe</div>
+          <div><i class="fas fa-sitemap"></i> creative coding : Pure Data / vvvv</div>
         </div>
       </div>
     </section>
@@ -75,7 +70,7 @@
       <h1>Expériences professionnelles</h1>
       <div class="exp">
         2018
-        <h3>Développeur frontend @ Circlesoft (Nouvelle-Zélande)</h3>
+        <h3>Développeur frontend @ Circlesoft (Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</h3>
         * https://circlepos.com/
         * Développement d'une interface pour le backoffice d'un système de gestion pour des librairies.
           * vuejs
