added School section, background to id photo

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -21,7 +21,7 @@
         <li>06 64 15 26 17</li>
         <li><a href="mailto:giildas@gmail.com">giildas@gmail.com</a></li>
         <li><a href="https://github.com/giildas">https://github.com/giildas</a></li>
-        <li><a href="http://giildas.fr">http://giildas.fr</a></li>
+        <!-- <li><a href="http://giildas.fr">http://giildas.fr</a></li> -->
       </ul>
       <img src="photo_id.png" >
     </header>
@@ -40,34 +40,34 @@
       <div class="skill">
         <h3><i class="fas fa-laptop-code"></i> Librairies JS</h3>
         <div class="skill-content">
-          <div><i class="fas fa-paint-brush"></i> React, Vuejs, Bootstrap</div>
-          <div><i class="fas fa-map-marked-alt"></i> Leaflet, Mapbox-gl</div>
-          <div><i class="fas fa-cubes"></i> Threejs, d3.js, chartjs...</div>
+          <div><i class="fas fa-paint-brush"></i>React, Vuejs, Bootstrap</div>
+          <div><i class="fas fa-map-marked-alt"></i>Leaflet, Mapbox-gl</div>
+          <div><i class="fas fa-cubes"></i>Threejs, d3.js, chartjs...</div>
         </div>
       </div>
       <div class="skill">
         <h3><i class="fas fa-toolbox"></i> Outils</h3>
         <div class="skill-content">
-          <div><i class="fas fa-cogs"></i> NPM, Webpack</div>
-          <div><i class="fab fa-node-js"></i> Nodejs</div>
-          <div><i class="fas fa-desktop"></i> Electron, NW.js</div>
-          <div><i class="fas fa-mobile-alt"></i> Cordova</div>
+          <div><i class="fas fa-cogs"></i>NPM, Webpack</div>
+          <div><i class="fab fa-node-js"></i>Nodejs</div>
+          <div><i class="fas fa-desktop"></i>Electron, NW.js</div>
+          <div><i class="fas fa-mobile-alt"></i>Cordova</div>
         </div>
       </div>
       <div class="skill">
         <h3><i class="far fa-window-restore"></i> Logiciels</h3>
         <div class="skill-content">
-          <div><i class="fab fa-wordpress"></i> Wordpress</div>
-          <div><i class="fas fa-globe"></i> qGis</div>
-          <div><i class="fas fa-paint-brush"></i> Suite Adobe</div>
-          <div><i class="fas fa-sitemap"></i> creative coding : Pure Data / vvvv</div>
+          <div><i class="fab fa-wordpress"></i>Wordpress</div>
+          <div><i class="fas fa-globe"></i>qGis</div>
+          <div><i class="fas fa-paint-brush"></i>Suite Adobe</div>
+          <div><i class="fas fa-sitemap"></i>Creative coding : Pure Data / vvvv</div>
         </div>
       </div>
     </section>
 
 
+    <h1>Expériences professionnelles</h1>
     <section id="experiences">
-      <h1>Expériences professionnelles</h1>
       <div class="exp">
         2018
         <h3>Développeur frontend @ Circlesoft (Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</h3>
@@ -118,19 +118,26 @@
         * Analyse d'images video, et capteurs (arduino)
         * Logiciels : Pure Data / VVVV
         * Compétences techniques (insallation de caméras, lumières)
-        *
       </div>
 
     </section>
 
 
-
+    <h1>Intérêts, hobbies</h1>
     <section id="interets">
         * Voyages
         * Lecture / Films
         * Randonnée, vélo
         * Bricolage
         * Bénévolat (festivals)
+    </section>
+    <h1>Formation</h1>
+    <section id="formation">
+        * 2012, CNAM formation développeur web
+        * 2008-2011, EESI (ecole supérieure de l'image Poitiers)
+        * 2005-2008, Ecole pivaut, Nantes
+        * 2004, 1an iut informatique, Nantes
+        * 2003, Baccalauréat S
     </section>
   </div>
 </body>
