style of experiences section

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -14,7 +14,7 @@
     <header>
       <div class="titles">
         <h2 class="name">Gildas PIERRE</h2>
-        <h1>Développeur frontend</h1>
+        <h1>Développeur<br />frontend</h1>
       </div>
       <ul>
         <li>32 ans</li>
@@ -59,7 +59,7 @@
         <div class="skill-content">
           <div><i class="fab fa-wordpress"></i>Wordpress</div>
           <div><i class="fas fa-globe"></i>qGis</div>
-          <div><i class="fas fa-paint-brush"></i>Suite Adobe</div>
+          <div><i class="fas fa-paint-brush"></i>Suite Adobe, Inkscape</div>
           <div><i class="fas fa-sitemap"></i>Creative coding : Pure Data / vvvv</div>
         </div>
       </div>
@@ -69,76 +69,115 @@
     <h1>Expériences professionnelles</h1>
     <section id="experiences">
       <div class="exp">
-        2018
-        <h3>Développeur frontend @ Circlesoft (Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</h3>
-        * https://circlepos.com/
-        * Développement d'une interface pour le backoffice d'un système de gestion pour des librairies.
-          * vuejs
-          * création d'API de communication avec le backend Rails
+        <h3>
+          <span class="exp-date">2018</span>
+          <span class="exp-title">Développeur frontend @ Circlesoft (Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</span>
+        </h3>
+        <div class="exp-content">
+          <a href="https://circlepos.com/">https://circlepos.com/</a><hr>
+          Développement d'une interface pour le backoffice d'un système de gestion de stock pour des librairies<hr>
+          Vuejs<hr>
+          Création d'API de communication avec le backend Rails
+        </div>
       </div>
       <div class="exp">
-        <h3></h3>
+        <h3>
+          <span class="exp-date">2014-2017</span>
+          <span class="exp-title">Développeur js/react/node @ mgdesign (Nantes)</span>
+        </h3>
+        <div class="exp-content">
+          <a href="http://www.mgdesign.fr/">http://www.mgdesign.fr/</a><hr>
+          Création d'interface pour des applications 3D et muséographie<hr>
+          reactjs / css3...<hr>
+          Cartographie interactive<hr>
+          Développement de mini-jeux canvas<hr>
+          Développement backend : nodeJs : divers scripts<hr>
+          Développement Wordpress : thèmes et plugins backoffice
+        </div>
       </div>
       <div class="exp">
-        <h3></h3>
-      </div>
-      <div class="exp">
-        2014-2017
-        <h3>Développeur js/node @ mgdesign (Nantes)</h3>
-        * http://www.mgdesign.fr/
-        * Création d'interface pour des applications 3D et muséographie
-        * reactjs / css3...
-        * Cartographie interactive
-        * Développement de mini-jeux canvas
-        * Développement backend : nodeJs : divers scripts
-        * Développement Wordpress : thèmes et plugins
-      </div>
-      <div class="exp">
-        2014
-        <h3>Intégrateur frontend @ Les Polypodes (Nantes)</h3>
-        * html5, CSS3, Twitter bootstrap, jQuery, code sémantique
+        <h3>
+          <span class="exp-date">2014</span>
+          <span class="exp-title">Intégrateur frontend @ Les Polypodes (Nantes)</span>
+        </h3>
+        <div class="exp-content">
+          HTML5<hr>
+          CSS3<hr>
+          Twitter bootstrap<hr>
+          jQuery<hr>
+          code sémantique
+        </div>
       </div>
 
       <div class="exp">
-        2014
-        <h3>Développement web freelance</h3>
-        * Développement themes et plugins wordpress (la plupart offline)
+        <h3>
+          <span class="exp-date">2014</span>
+          <span class="exp-title">Développement web freelance</span>
+        </h3>
+        <div class="exp-content">
+          Développement de sites web (la plupart offline)<hr>
+          Themes et plugins wordpress
+        </div>
       </div>
 
       <div class="exp">
-        2012
-        <h3>Developpeur web stage @ Association Culturelle de l'été (Nantes)</h3>
-        * Développement du site du festival les Rendez-vous de l'Erdre avec Wordpress
+        <h3>
+          <span class="exp-date">2012</span>
+          <span class="exp-title">Développeur web stage @ Association Culturelle de l'été (Nantes)</span>
+        </h3>
+        <div class="exp-content">
+          Développement du site du festival les Rendez-vous de l'Erdre avec Wordpress
+        </div>
       </div>
       <div class="exp">
-        2010 - 2014 :
-        <h3>Developpeur de jeux vidéo @ Collectif Battle Interactive</h3>
-        * https://vimeo.com/battleinteractive
-        * Développement de jeux vidéo jouables par un grand nombre de personnes durant des évenements publics (concerts/festivals)
-        * Analyse d'images video, et capteurs (arduino)
-        * Logiciels : Pure Data / VVVV
-        * Compétences techniques (insallation de caméras, lumières)
+        <h3>
+          <span class="exp-date">2010 - 2014</span>
+          <span class="exp-title">Développeur de jeux vidéo @ Collectif Battle Interactive</span>
+        </h3>
+        <div class="exp-content">
+          <a href="https://vimeo.com/battleinteractive">https://vimeo.com/battleinteractive</a><hr>
+          Développement de jeux vidéo jouables par un grand nombre de personnes durant des évenements publics (concerts/festivals)<hr>
+          Analyse d'images video, et capteurs (arduino)<hr>
+          Logiciels : Pure Data / VVVV<hr>
+          Compétences techniques (installation de caméras, lumières)
+        </div>
+
       </div>
 
     </section>
 
+    <section id="bottom">
+      <div id="interets">
+          * Voyages
+          * Lecture / Films
+          * Randonnée, vélo
+          * Bricolage
+          * Bénévolat (festivals)
+      </div>
+      <div id="formation">
+          <div class="form">
+            <span>2012</span>
+            <span>CNAM formation développeur web</span>
+          </div>
+          <div class="form">
+            <span>2008-2011</span>
+            <span>EESI (ecole supérieure de l'image Poitiers)</span>
+          </div>
+          <div class="form">
+            <span>2005-2008</span>
+            <span>Ecole pivaut, Nantes</span>
+          </div>
+          <div class="form">
+            <span>2004</span>
+            <span>1an iut informatique, Nantes</span>
+          </div>
+          <div class="form">
+            <span>2003</span>
+            <span>Baccalauréat S</span>
+          </div>
+      </div>
+    </section>
 
-    <h1>Intérêts, hobbies</h1>
-    <section id="interets">
-        * Voyages
-        * Lecture / Films
-        * Randonnée, vélo
-        * Bricolage
-        * Bénévolat (festivals)
-    </section>
-    <h1>Formation</h1>
-    <section id="formation">
-        * 2012, CNAM formation développeur web
-        * 2008-2011, EESI (ecole supérieure de l'image Poitiers)
-        * 2005-2008, Ecole pivaut, Nantes
-        * 2004, 1an iut informatique, Nantes
-        * 2003, Baccalauréat S
-    </section>
-  </div>
+  </div> <!-- /page -->
 </body>
 </html>
