--- a/cv-2018.html
+++ b/cv-2018.html
@@ -88,10 +88,9 @@
         <div class="exp-content">
           <a href="http://www.mgdesign.fr/">http://www.mgdesign.fr/</a><hr>
           Création d'interface pour des applications 3D et muséographie<hr>
-          reactjs / css3...<hr>
+          React, Canvas HTML<hr>
           Cartographie interactive<hr>
-          Développement de mini-jeux canvas<hr>
-          Développement backend : nodeJs : divers scripts<hr>
+          Développement backend : nodeJs, divers scripts<hr>
           Développement Wordpress : thèmes et plugins backoffice
         </div>
       </div>
@@ -116,7 +115,7 @@
         </h3>
         <div class="exp-content">
           Développement de sites web (la plupart offline)<hr>
-          Themes et plugins wordpress
+          Themes et plugins Wordpress
         </div>
       </div>
 
@@ -126,7 +125,8 @@
           <span class="exp-title">Développeur web stage @ Association Culturelle de l'été (Nantes)</span>
         </h3>
         <div class="exp-content">
-          Développement du site du festival les Rendez-vous de l'Erdre avec Wordpress
+          Développement du site du festival les Rendez-vous de l'Erdre<hr>
+          Wordpress
         </div>
       </div>
       <div class="exp">
@@ -177,7 +177,9 @@
           </div>
       </div>
     </section>
-
+    <footer>
+      ce cv a été créé uniquement en html et css :)
+    </footer>
   </div> <!-- /page -->
 </body>
 </html>
