styled bottom section

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -26,7 +26,6 @@
       <img src="photo_id.png" >
     </header>
 
-    <h1>Compétences</h1>
     <section id="skills">
       <div class="skill">
         <h3><i class="fas fa-code"></i> Langages</h3>
@@ -65,13 +64,11 @@
       </div>
     </section>
 
-
-    <h1>Expériences professionnelles</h1>
     <section id="experiences">
       <div class="exp">
         <h3>
           <span class="exp-date">2018</span>
-          <span class="exp-title">Développeur frontend @ Circlesoft (Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</span>
+          <span class="exp-title">Développeur frontend @ Circlesoft (Christchurch, Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</span>
         </h3>
         <div class="exp-content">
           <a href="https://circlepos.com/">https://circlepos.com/</a><hr>
@@ -87,8 +84,9 @@
         </h3>
         <div class="exp-content">
           <a href="http://www.mgdesign.fr/">http://www.mgdesign.fr/</a><hr>
-          Création d'interface pour des applications 3D et muséographie<hr>
-          React, Canvas HTML<hr>
+          Création d'interfaceS pour des applications 3D et muséographie<hr>
+          React<hr>
+          Canvas<hr>
           Cartographie interactive<hr>
           Développement backend : nodeJs, divers scripts<hr>
           Développement Wordpress : thèmes et plugins backoffice
@@ -147,39 +145,48 @@
     </section>
 
     <section id="bottom">
-      <div id="interets">
-          * Voyages
-          * Lecture / Films
-          * Randonnée, vélo
-          * Bricolage
-          * Bénévolat (festivals)
+      <div id="autre">
+        <h2>Autres informations</h2>
+        <ul>
+          <li>Anglais niveau avancé, espagnol niveau scolaire</li>
+          <li>Permis B</li>
+          <li>
+            <strong>Intérêts :</strong> voyages<hr>
+            lecture<hr>
+            films<hr>
+            randonnée<hr>
+            vélo<hr>
+            bricolage<hr>
+            bénévolat (festivals)...
+          </li>
+        </ul>
       </div>
       <div id="formation">
-          <div class="form">
-            <span>2012</span>
-            <span>CNAM formation développeur web</span>
-          </div>
-          <div class="form">
-            <span>2008-2011</span>
-            <span>EESI (ecole supérieure de l'image Poitiers)</span>
-          </div>
-          <div class="form">
-            <span>2005-2008</span>
-            <span>Ecole pivaut, Nantes</span>
-          </div>
-          <div class="form">
-            <span>2004</span>
-            <span>1an iut informatique, Nantes</span>
-          </div>
-          <div class="form">
-            <span>2003</span>
-            <span>Baccalauréat S</span>
-          </div>
+        <h2>Formation</h2>
+        <div class="form">
+          <span>2012</span>
+          <span>CNAM formation développeur web</span>
+        </div>
+        <div class="form">
+          <span>2008-2011</span>
+          <span>École Européenne Supérieure de l'Image, Poitiers</span>
+        </div>
+        <div class="form">
+          <span>2005-2008</span>
+          <span>Ecole Pivaut, Nantes</span>
+        </div>
+        <div class="form">
+          <span>2004</span>
+          <span>1ère année IUT informatique, Nantes</span>
+        </div>
+        <div class="form">
+          <span>2003</span>
+          <span>Baccalauréat S</span>
+        </div>
       </div>
     </section>
-    <footer>
-      ce cv a été créé uniquement en html et css :)
-    </footer>
+
+    <footer></footer>
   </div> <!-- /page -->
 </body>
 </html>
