--- a/cv-2018.html
+++ b/cv-2018.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <div class="skill">
-        <h3><i class="fas fa-laptop-code"></i> Librairies JS</h3>
+        <h3><i class="fas fa-laptop-code"></i> Librairies JS Front</h3>
         <div class="skill-content">
           <div><i class="fas fa-paint-brush"></i>React, Vuejs, Bootstrap</div>
           <div><i class="fas fa-map-marked-alt"></i>Leaflet, Mapbox-gl</div>
@@ -48,7 +48,7 @@
         <h3><i class="fas fa-toolbox"></i> Outils</h3>
         <div class="skill-content">
           <div><i class="fas fa-cogs"></i>NPM, Webpack</div>
-          <div><i class="fab fa-node-js"></i>Nodejs</div>
+          <div><i class="fab fa-node-js"></i>Nodejs, Express</div>
           <div><i class="fas fa-desktop"></i>Electron, NW.js</div>
           <div><i class="fas fa-mobile-alt"></i>Cordova</div>
         </div>
@@ -73,7 +73,7 @@
         <div class="exp-content">
           <a href="https://circlepos.com/">https://circlepos.com/</a><hr>
           Développement d'une interface pour le backoffice d'un système de gestion de stock pour des librairies<hr>
-          Vuejs<hr>
+          Vuejs + Bootstrap<hr>
           Création d'API de communication avec le backend Rails
         </div>
       </div>
@@ -84,7 +84,7 @@
         </h3>
         <div class="exp-content">
           <a href="http://www.mgdesign.fr/">http://www.mgdesign.fr/</a><hr>
-          Création d'interfaceS pour des applications 3D et muséographie<hr>
+          Création d'interfaces pour des applications 3D et muséographie<hr>
           React<hr>
           Canvas<hr>
           Cartographie interactive<hr>
@@ -100,7 +100,7 @@
         <div class="exp-content">
           HTML5<hr>
           CSS3<hr>
-          Twitter bootstrap<hr>
+          Bootstrap<hr>
           jQuery<hr>
           code sémantique
         </div>
@@ -113,7 +113,7 @@
         </h3>
         <div class="exp-content">
           Développement de sites web (la plupart offline)<hr>
-          Themes et plugins Wordpress
+          Thèmes et plugins Wordpress
         </div>
       </div>
 
@@ -134,7 +134,7 @@
         </h3>
         <div class="exp-content">
           <a href="https://vimeo.com/battleinteractive">https://vimeo.com/battleinteractive</a><hr>
-          Développement de jeux vidéo jouables par un grand nombre de personnes durant des évenements publics (concerts/festivals)<hr>
+          Développement de jeux vidéo jouables par un grand nombre de personnes durant des événements publics (concerts/festivals)<hr>
           Analyse d'images video, et capteurs (arduino)<hr>
           Logiciels : Pure Data / VVVV<hr>
           Compétences techniques (installation de caméras, lumières)
@@ -148,10 +148,11 @@
       <div id="autre">
         <h2>Autres informations</h2>
         <ul>
-          <li>Anglais niveau avancé, espagnol niveau scolaire</li>
+          <li>Anglais très bon niveau, espagnol niveau scolaire</li>
           <li>Permis B</li>
           <li>
-            <strong>Intérêts :</strong> voyages<hr>
+            <strong>Intérêts :</strong>
+            voyages<hr>
             lecture<hr>
             films<hr>
             randonnée<hr>
