css & texts adjustements for better layout

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -12,16 +12,13 @@
 <body>
   <div class="page">
     <header>
-      <div class="titles">
-        <h2 class="name">Gildas PIERRE</h2>
-        <h1>Développeur<br />frontend</h1>
-      </div>
+      <h1>Développeur<br />frontend</h1>
       <ul>
+        <li><h2>Gildas PIERRE</h2></li>
         <li><span id="age"></span> ans</li>
         <li>06 64 15 26 17</li>
         <li><a href="mailto:giildas@gmail.com">giildas@gmail.com</a></li>
         <li><a href="https://github.com/giildas">https://github.com/giildas</a></li>
-        <!-- <li><a href="http://giildas.fr">http://giildas.fr</a></li> -->
       </ul>
       <img src="photo_id.png" >
     </header>
@@ -41,7 +38,8 @@
         <div class="skill-content">
           <div><i class="fas fa-paint-brush"></i>React, Vuejs, Bootstrap</div>
           <div><i class="fas fa-map-marked-alt"></i>Leaflet, Mapbox-gl</div>
-          <div><i class="fas fa-cubes"></i>Threejs, d3.js, chartjs...</div>
+          <div><i class="fas fa-chart-line"></i>d3.js, chartjs...</div>
+          <div><i class="fas fa-cubes"></i>Threejs, Phaser, CreateJS...</div>
         </div>
       </div>
       <div class="skill">
@@ -49,8 +47,8 @@
         <div class="skill-content">
           <div><i class="fas fa-cogs"></i>NPM, Webpack</div>
           <div><i class="fab fa-node-js"></i>Nodejs, Express</div>
-          <div><i class="fas fa-desktop"></i>Electron, NW.js</div>
-          <div><i class="fas fa-mobile-alt"></i>Cordova</div>
+          <div><i class="fas fa-tablet-alt"></i>Electron, NW.js, Cordova</div>
+          <div><i class="fas fa-code-branch"></i>Git</div>
         </div>
       </div>
       <div class="skill">
@@ -68,7 +66,7 @@
       <div class="exp">
         <h3>
           <span class="exp-date">2018</span>
-          <span class="exp-title">Développeur frontend @ Circlesoft (Christchurch, Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</span>
+          <span class="exp-title">Développeur frontend Vuejs @ Circlesoft (Christchurch, Nouvelle-Zélande <i class="fas fa-kiwi-bird"></i>)</span>
         </h3>
         <div class="exp-content">
           <a href="https://circlepos.com/">https://circlepos.com/</a><hr>
@@ -112,7 +110,7 @@
           <span class="exp-title">Développement web freelance</span>
         </h3>
         <div class="exp-content">
-          Développement de sites web (la plupart offline)<hr>
+          Développement de sites Wordpress (la plupart offline aujourd'hui)<hr>
           Thèmes et plugins Wordpress
         </div>
       </div>
@@ -147,20 +145,19 @@
     <section id="bottom">
       <div id="autre">
         <h2>Autres informations</h2>
-        <ul>
-          <li>Anglais très bon niveau, espagnol niveau scolaire</li>
-          <li>Permis B</li>
-          <li>
-            <strong>Intérêts :</strong>
-            voyages<hr>
-            lecture<hr>
-            films<hr>
-            randonnée<hr>
-            vélo<hr>
-            bricolage<hr>
-            bénévolat (festivals)...
-          </li>
-        </ul>
+
+          Anglais très bon niveau<hr>
+          espagnol niveau scolaire<hr>
+          Permis B<br><br>
+          <strong>Intérêts :</strong>
+          voyages<hr>
+          lecture<hr>
+          films<hr>
+          randonnée<hr>
+          vélo<hr>
+          bricolage<hr>
+          bénévolat...
+        </p>
       </div>
       <div id="formation">
         <h2>Formation</h2>
@@ -174,11 +171,11 @@
         </div>
         <div class="form">
           <span>2005-2008</span>
-          <span>Ecole Pivaut, Nantes</span>
+          <span>Ecole Pivaut d'arts appliqués, Nantes</span>
         </div>
         <div class="form">
           <span>2004</span>
-          <span>1ère année IUT informatique, Nantes</span>
+          <span>IUT informatique, Nantes</span>
         </div>
         <div class="form">
           <span>2003</span>
