small changes + better bottom section

--- a/cv-2018.html
+++ b/cv-2018.html
@@ -144,17 +144,22 @@
 
       <div id="autre">
         <h2>Autres informations</h2>
-          Anglais très bon niveau<hr>
-          espagnol niveau scolaire<hr>
-          Permis B<br><br>
-          <strong>Intérêts :</strong>
-          voyages<hr>
-          lecture<hr>
-          films<hr>
-          randonnée<hr>
-          vélo<hr>
-          bricolage<hr>
+        <p>
+          <span>Anglais très bon niveau</span>
+          <span>Espagnol niveau scolaire</span>
+          Permis B
+        </p>
+
+        <h2>Intérêts</h2>
+        <p>
+          <span>voyages</span>
+          <span>lecture</span>
+          <span>films</span>
+          <span>randonnée</span>
+          <span>vélo</span>
+          <span>bricolage</span>
           bénévolat...
+
         </p>
       </div>
 
